fixed close align glitch

--- a/index.css
+++ b/index.css
@@ -969,14 +969,16 @@ body {
         text-align: center;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         padding: 0;
-        align-items: center;
-        justify-content: center; 
+        align-items: flex-start;
+        justify-content: flex-start; 
         transition: max-height 0.3s ease-in-out, padding 1s ease-in-out; 
     }
 
         .nav-container.show {
+            display: flex;
             max-height: 350px;
             align-items: flex-start;
+            justify-content: flex-start;
             padding-left: 30px;
         }
 
